# c_sdl

./: .envrc  .gitignore  Makefile  meson.build
console/: \  console.c  console.h  meson.build
console-test/: console-test.c  console-test.h  meson.build
console/assets/: cmatrix.ansi
meson/: meson.build
scripts/: unscii2raw.py
sdl-app/: meson.build  sdl-app.c  sdl-app.h
sdl-app-fonts/: meson.build  sdl-app-fonts-16.h  sdl-app-fonts-8.h
sdl-app-test/: meson.build  sdl-app-test.c  sdl-app-test.h
sdl-term-app-test/: meson.build  sdl-term-app-test.c  sdl-term-app-test.h
submodules/: meson.build  meson_deps
