
subdir('meson_deps/meson')
#subdir('meson_deps/meson/deps/sys')
#subdir('meson_deps/meson/deps/ansicodes')
#subdir('meson_deps/submodules/meson_')
#subdir('meson_deps/submodules/c_darwin/submodules')
#subdir('meson_deps/meson/deps/parson')
#subdir('meson_deps/meson/deps/c_stringfn')
#subdir('meson_deps/meson/deps/log.h')
#subdir('meson_deps/meson/deps/asprintf')

subdir('meson_deps/submodules/c_ansi/ansi-utils')
subdir('meson_deps/submodules/c_ansi/string-utils')
subdir('meson_deps/submodules/c_darwin/core-utils')
subdir('meson_deps/submodules/c_darwin/active-app')
subdir('meson_deps/submodules/c_darwin/app-utils')
subdir('meson_deps/submodules/c_darwin/pbpaste')
subdir('meson_deps/submodules/c_darwin/pasteboard')
subdir('meson_deps/submodules/c_darwin/system-utils')
subdir('meson_deps/submodules/c_darwin/kitty')
subdir('meson_deps/submodules/c_darwin/process')
subdir('meson_deps/submodules/c_darwin/window-utils')
subdir('meson_deps/submodules/c_darwin/capture')

#subdir('meson_deps/meson/deps/sdl2')
#subdir('meson_deps/meson/deps/chan')
#subdir('meson_deps/meson/deps/greatest')
#subdir('meson_deps/meson/deps/ms')
#subdir('meson_deps/meson/deps/c-timestamp')
#subdir('meson_deps/meson/deps/timestamp')
#subdir('meson_deps/meson/deps/c_timer')
subdir('meson_deps/submodules/c_darwin/app-utils-test')
subdir('meson_deps/submodules/c_darwin/window-utils-test')
subdir('meson_deps/submodules/c_darwin/active-app-test')
subdir('meson_deps/submodules/c_darwin/process-test')
#subdir('meson_deps/meson/deps/bytes')
