
subdir('c_deps/meson')
#subdir('c_deps/meson/deps/sys')
#subdir('c_deps/meson/deps/ansicodes')
#subdir('c_deps/submodules/meson_')
#subdir('c_deps/submodules/c_darwin/submodules')
#subdir('c_deps/meson/deps/parson')
#subdir('c_deps/meson/deps/c_stringfn')
#subdir('c_deps/meson/deps/log.h')
#subdir('c_deps/meson/deps/asprintf')

subdir('c_deps/submodules/c_ansi/ansi-utils')
subdir('c_deps/submodules/c_ansi/string-utils')
subdir('c_deps/submodules/c_darwin/core-utils')
subdir('c_deps/submodules/c_darwin/active-app')
subdir('c_deps/submodules/c_darwin/app-utils')
subdir('c_deps/submodules/c_darwin/pbpaste')
subdir('c_deps/submodules/c_darwin/pasteboard')
subdir('c_deps/submodules/c_darwin/system-utils')
subdir('c_deps/submodules/c_darwin/process')
subdir('c_deps/submodules/c_darwin/kitty')
subdir('c_deps/submodules/c_darwin/window-utils')
subdir('c_deps/submodules/c_darwin/capture')

#subdir('c_deps/meson/deps/sdl2')
#subdir('c_deps/meson/deps/chan')
#subdir('c_deps/meson/deps/c_greatest')
#subdir('c_deps/meson/deps/ms')
#subdir('c_deps/meson/deps/c-timestamp')
#subdir('c_deps/meson/deps/timestamp')
#subdir('c_deps/meson/deps/c_timer')
subdir('c_deps/submodules/c_darwin/app-utils-test')
subdir('c_deps/submodules/c_darwin/window-utils-test')
subdir('c_deps/submodules/c_darwin/active-app-test')
subdir('c_deps/submodules/c_darwin/process-test')
#subdir('c_deps/meson/deps/bytes')
