
subdir('c_deps/meson/osx')
subdir('c_deps/meson/deps/iconv')
subdir('c_deps/meson/sqlite3')
subdir('c_deps/meson/deps/asprintf')
subdir('c_deps/meson/deps/smaz')
subdir('c_deps/meson/deps/rotate_bits')
subdir('c_deps/meson/deps/sha256.c')
subdir('c_deps/meson/deps/c_greatest')
subdir('c_deps/meson/deps/hash')
subdir('c_deps/meson/deps/tmt')
subdir('c_deps/meson/deps/tempdir')
subdir('c_deps/meson/deps/progress')
subdir('c_deps/meson/deps/sdl2')
subdir('c_deps/meson/deps/stb')
subdir('c_deps/meson/deps/uuid4')
subdir('c_deps/meson/deps/ms')
subdir('c_deps/meson/deps/timestamp')
subdir('c_deps/meson/deps/incbin')
subdir('c_deps/meson/deps/wildcardcmp')
subdir('c_deps/meson/deps/c_dbg')
subdir('c_deps/meson/deps/termpaint')
subdir('c_deps/meson/deps/c_string_buffer')
subdir('c_deps/meson/deps/c_fsio')
subdir('c_deps/meson/deps/module')
subdir('c_deps/meson/deps/c_timer')
subdir('c_deps/meson/deps/c_vector')
subdir('c_deps/meson/deps/c_stringfn')
subdir('c_deps/meson/deps/b64')
subdir('c_deps/meson/deps/hsluv-c')
subdir('c_deps/meson/deps/rgba')
subdir('c_deps/meson/deps/djbhash')
subdir('c_deps/meson/deps/libyaml')
subdir('c_deps/meson/deps/cargs')
subdir('c_deps/meson/deps/parson')
subdir('c_deps/meson/deps/chan')
subdir('c_deps/meson/deps/fs')
subdir('c_deps/meson/deps/log')
subdir('c_deps/meson/deps/bytes')
subdir('c_deps/submodules/c_ansi/ansi-codes')
subdir('c_deps/submodules/c_ansi/ansi-utils')
subdir('c_deps/submodules/c_ansi/ansi-rgb-utils')
subdir('c_deps/lodepng')

subdir('c_deps/submodules/c_ansi/string-utils')
